--- a/style.css
+++ b/style.css
@@ -478,6 +478,120 @@
   cursor: pointer;
 }
 
+/* choose section */
+.choose-wraper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #0C4B35;
+  position: relative;
+}
+.choose-wraper .container .content-wraper {
+  margin-bottom: 50px;
+}
+.choose-wraper .container .img-wraper {
+  position: relative;
+  margin-top: 50px;
+  z-index: 10;
+}
+.choose-wraper .container .img-wraper img {
+  width: 345px;
+}
+.choose-wraper .container .title-wraper {
+  margin-top: 30px;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.choose-wraper .container .title {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 38px;
+  margin-bottom: 15px;
+  color: white;
+}
+.choose-wraper .container .text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  text-align: center;
+  color: white;
+}
+.choose-wraper .container .proper-wraper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+.choose-wraper .container .proper-wraper .proper {
+  display: flex;
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 21px;
+  width: calc(50% - 10px);
+}
+.choose-wraper .container .proper-wraper .proper > div {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  background-color: white;
+  border-radius: 25px;
+}
+.choose-wraper .container .proper-wraper .proper > div div:first-child {
+  position: absolute;
+  width: 6px;
+  height: 1.5px;
+  top: 11px;
+  left: 3px;
+  transform: rotate(45deg);
+  background-color: #0C4B35;
+  border-radius: 10px;
+}
+.choose-wraper .container .proper-wraper .proper > div div:last-child {
+  position: absolute;
+  width: 12px;
+  height: 1.5px;
+  left: 6px;
+  top: 9px;
+  transform: rotate(135deg);
+  background-color: #0C4B35;
+  border-radius: 10px;
+}
+.choose-wraper .container .btn {
+  display: block;
+  margin: auto;
+  border: none;
+  background-color: #00730C;
+  width: 167px;
+  height: 40px;
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+}
+.choose-wraper .bg-leaf-left {
+  content: url(img/chose-bg-left.png);
+  position: absolute;
+  top: 120px;
+  left: -80px;
+  width: 250px;
+  height: 248px;
+}
+.choose-wraper .bg-leaf-right {
+  content: url(img/choose-bg-right.png);
+  position: absolute;
+  top: -30px;
+  right: 0;
+  width: 200px;
+  height: 196px;
+}
+
 /* comment section */
 .comment-wraper {
   display: flex;
@@ -815,7 +929,7 @@
   /* hero section */
   .hero-wraper .mobile-hero-img {
     content: url(img/hero-img-desc.jpg);
-    width: 768px;
+    width: 100%;
   }
   .hero-wraper .mobile-hero-img img {
     display: none;
@@ -935,6 +1049,34 @@
   }
   .exp-wraper .container .cards-wraper {
     width: 100%;
+  }
+  /* choose section */
+  .choose-wraper .container .img-wraper img {
+    width: 672px;
+  }
+  .choose-wraper .container .proper-wraper {
+    justify-content: center;
+  }
+  .choose-wraper .container .proper-wraper .proper {
+    width: calc(33% - 10px);
+    justify-content: center;
+  }
+  .choose-wraper .container .btn {
+    width: 200px;
+    height: 50px;
+    font-size: 18px;
+    line-height: 22px;
+  }
+  .choose-wraper .bg-leaf-left {
+    top: 35px;
+    left: -90px;
+    width: auto;
+    height: auto;
+  }
+  .choose-wraper .bg-leaf-right {
+    top: -50px;
+    width: auto;
+    height: auto;
   }
   .comment-wraper .container .slider .slick-track {
     display: flex;
@@ -1325,6 +1467,81 @@
     font-size: 18px;
     font-weight: 700;
     line-height: 24px;
+  }
+  /* choose section */
+  .choose-wraper .container .content-wraper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row-reverse;
+    width: 100%;
+    margin: 100px 0;
+  }
+  .choose-wraper .container .content-wraper .desk-wraper {
+    width: 656px;
+  }
+  .choose-wraper .container .img-wraper {
+    margin-top: 0;
+  }
+  .choose-wraper .container .img-wraper img {
+    width: 672px;
+  }
+  .choose-wraper .container .title-wraper {
+    margin-top: 0;
+    margin-bottom: 50px;
+    display: block;
+  }
+  .choose-wraper .container .title {
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 61px;
+    margin-bottom: 30px;
+  }
+  .choose-wraper .container .text {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: start;
+  }
+  .choose-wraper .container .proper-wraper {
+    margin-bottom: 50px;
+  }
+  .choose-wraper .container .proper-wraper .proper {
+    justify-content: flex-start;
+    font-size: 24px;
+    line-height: 32px;
+    width: calc(50% - 10px);
+  }
+  .choose-wraper .container .proper-wraper .proper > div {
+    width: 30px;
+    height: 30px;
+    margin-right: 20px;
+  }
+  .choose-wraper .container .proper-wraper .proper > div div:first-child {
+    width: 9px;
+    height: 2px;
+    top: 17px;
+    left: 5px;
+  }
+  .choose-wraper .container .proper-wraper .proper > div div:last-child {
+    width: 18px;
+    height: 2px;
+    left: 9px;
+    top: 14px;
+  }
+  .choose-wraper .container .btn {
+    margin: 0;
+    width: 190px;
+    height: 50px;
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .choose-wraper .container .bg-leaf-left {
+    top: 65px;
+    left: 0px;
+  }
+  .choose-wraper .container .bg-leaf-right {
+    top: 0;
   }
   .comment-wraper .container .content-wraper {
     width: 100%;
