--- a/style.scss
+++ b/style.scss
@@ -459,6 +459,115 @@
     }
 }
 
+/* choose section */
+
+.choose-wraper {
+    @include flex-center;
+    background-color: $main-color;
+    position: relative;
+    .container {
+        .content-wraper {
+            margin-bottom: 50px;
+        }
+        .img-wraper {
+            position: relative;
+            margin-top: 50px;
+            z-index: 10;
+            img {
+                width: 345px;
+            }
+        }
+        .title-wraper {
+            margin-top: 30px;
+            margin-bottom: 40px;
+            @include flex-center;
+            flex-direction: column;
+        }
+        .title {
+            font-size: 28px;
+            font-weight: 700;
+            line-height: 38px;
+            margin-bottom: 15px;
+            color: white;
+        }
+        .text {
+            @include regular-font;
+            text-align: center;
+            color: white;
+        }
+        .proper-wraper {
+            @include flex-space-between;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-bottom: 30px;
+            .proper {
+                display: flex;
+                color: white;
+                font-size: 16px;
+                font-weight: 700;
+                line-height: 21px;
+                width: calc(50% - 10px);
+                & > div {
+                    position: relative;
+                    width: 20px;
+                    height: 20px;
+                    margin-right: 10px;
+                    background-color: white;
+                    border-radius: 25px;
+                    div:first-child {
+                        position: absolute;
+                        width: 6px;
+                        height: 1.5px;
+                        top: 11px;
+                        left: 3px;
+                        transform: rotate(45deg);
+                        background-color: $main-color;
+                        border-radius: 10px;
+                    }
+                    div:last-child {
+                        position: absolute;
+                        width: 12px;
+                        height: 1.5px;
+                        left: 6px;
+                        top: 9px;
+                        transform: rotate(135deg);
+                        background-color: $main-color;
+                        border-radius: 10px;
+                    }
+                }
+            }
+        }
+        .btn {
+            display: block;
+            margin: auto;
+            border: none;
+            background-color: $second-color;
+            width: 167px;
+            height: 40px;
+            color: white;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 20px;
+        }
+    }
+    .bg-leaf-left {
+        content: url(img/chose-bg-left.png);
+        position: absolute;
+        top: 120px;
+        left: -80px;
+        width: 250px;
+        height: 248px;
+    }
+    .bg-leaf-right {
+        content: url(img/choose-bg-right.png);
+        position: absolute;
+        top: -30px;
+        right: 0;
+        width: 200px;
+        height: 196px;
+    }
+}
+
 /* comment section */
 
 .comment-wraper {
@@ -798,7 +907,7 @@
                 display: none;
             }
             content: url(img/hero-img-desc.jpg);
-            width: 768px;
+            width: 100%;
         }
     }
     .container {
@@ -909,6 +1018,42 @@
             .cards-wraper {
                 width: 100%;
             }
+        }
+    }
+
+    /* choose section */
+
+    .choose-wraper {
+        .container {
+            .img-wraper {
+                img {
+                    width: 672px;
+                }
+            }
+            .proper-wraper {
+                justify-content: center;
+                .proper {
+                    width: calc(33% - 10px);
+                    justify-content: center;
+                }
+            }
+            .btn {
+                width: 200px;
+                height: 50px;
+                font-size: 18px;
+                line-height: 22px;
+            }
+        }
+        .bg-leaf-left {
+            top: 35px;
+            left: -90px;
+            width: auto;
+            height: auto;
+        }
+        .bg-leaf-right {
+            top: -50px;
+            width: auto;
+            height: auto;
         }
     }
 
@@ -1053,8 +1198,8 @@
             position: absolute;
             bottom: 0;
             right: 0;
-            }
         }
+    }
     .container {
         width: 1410px;
         .content-wraper {
@@ -1312,6 +1457,84 @@
             }
         }
     }
+
+    /* choose section */
+
+    .choose-wraper {
+        .container {
+            .content-wraper {
+                @include flex-space-between;
+                flex-direction: row-reverse;
+                width: 100%;
+                margin: 100px 0;
+                & .desk-wraper {
+                    width: 656px;
+                }
+            }
+            .img-wraper {
+                margin-top: 0;
+                img {
+                    width: 672px;
+                }
+            }
+            .title-wraper {
+                margin-top: 0;
+                margin-bottom: 50px;
+                display: block;
+            }
+            .title {
+                font-size: 45px;
+                font-weight: 700;
+                line-height: 61px;
+                margin-bottom: 30px;
+            }
+            .text {
+                @include regular-font-desc;
+                text-align: start;
+            }
+            .proper-wraper {
+                margin-bottom: 50px;
+                .proper {
+                    justify-content: flex-start;
+                    font-size: 24px;
+                    line-height: 32px;
+                    width: calc(50% - 10px);
+                    & > div {
+                        width: 30px;
+                        height: 30px;
+                        margin-right: 20px;
+                        div:first-child {
+                            width: 9px;
+                            height: 2px;
+                            top: 17px;
+                            left: 5px;
+                        }
+                        div:last-child {
+                            width: 18px;
+                            height: 2px;
+                            left: 9px;
+                            top: 14px;
+                        }
+                    }
+                }
+            }
+            .btn {
+                margin: 0;
+                width: 190px;
+                height: 50px;
+                font-size: 18px;
+                line-height: 24px;
+            }
+            .bg-leaf-left {
+                top: 65px;
+                left: 0px;
+            }
+            .bg-leaf-right {
+                top: 0;
+            }
+        }
+    }
+
     // comment selection
 
     .comment-wraper {
